bonus/confs/argocd-custom-ca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-repo-server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-repo-server
    spec:
      containers:
      - name: argocd-repo-server
        volumeMounts:
        - name: gitlab-ca
          mountPath: /etc/ssl/certs/gitlab.crt
          subPath: gitlab.crt
      volumes:
      - name: gitlab-ca
        configMap:
          name: argocd-custom-ca
